// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModifierButton /> should handle "className" properly 1`] = `
<ForwardRef(ModifierButton)
  className="test-class"
>
  <div
    className="modifier-button test-class"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "color" properly 1`] = `
<ForwardRef(ModifierButton)
  color="#bada55"
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
    style={
      Object {
        "background": "#bada55",
      }
    }
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "color" properly 2`] = `
<ForwardRef(ModifierButton)>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "onClick" prop 1`] = `
<div
  className="modifier-button test-class"
  data-testid="modifier-button"
  onClick={[MockFunction]}
>
  <div
    className="content"
  >
    <span
      className="text guttered"
    >
      Test content
    </span>
  </div>
</div>
`;

exports[`<ModifierButton /> should handle "selected" properly 1`] = `
<ForwardRef(ModifierButton)
  selected={true}
>
  <div
    className="modifier-button selected"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "selected" properly 2`] = `
<ForwardRef(ModifierButton)>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "type" and "content" properly 1`] = `
<ForwardRef(ModifierButton)
  content="Test content"
  type="text"
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      >
        Test content
      </span>
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "type" and "content" properly 2`] = `
<ForwardRef(ModifierButton)
  content="Test content"
  image="www.abc.com"
  type="image"
>
  <div
    className="modifier-button squared"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <img
        alt="Test content"
        className="image"
        src="www.abc.com"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should handle "type" and "content" properly 3`] = `
<ForwardRef(ModifierButton)
  image="www.abc.com"
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should not show title when type is color 1`] = `
<ForwardRef(ModifierButton)
  content="content"
  type="color"
>
  <div
    className="modifier-button squared"
    data-testid="modifier-button"
  />
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render count 1`] = `
<ForwardRef(ModifierButton)
  count={12}
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <span
      className="label with-count"
      data-testid="modifier-button:badge"
    >
      12
    </span>
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render count 2`] = `
<ForwardRef(ModifierButton)>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render count 3`] = `
<ForwardRef(ModifierButton)
  count={123}
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <span
      className="label with-count"
      data-testid="modifier-button:badge"
    >
      99+
    </span>
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render markdown and count 1`] = `
<ForwardRef(ModifierButton)
  count={666}
  isMarkdown={true}
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <span
      className="label with-count"
      data-testid="modifier-button:badge"
    >
      99+
      (У)
    </span>
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render markdown and count 2`] = `
<ForwardRef(ModifierButton)
  isMarkdown={true}
>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <span
      className="label"
      data-testid="modifier-button:badge"
    >
      У
    </span>
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;

exports[`<ModifierButton /> should render without props 1`] = `
<ForwardRef(ModifierButton)>
  <div
    className="modifier-button"
    data-testid="modifier-button"
  >
    <div
      className="content"
    >
      <span
        className="text guttered"
      />
    </div>
  </div>
</ForwardRef(ModifierButton)>
`;
